--- a/src/About.css
+++ b/src/About.css
@@ -191,15 +191,23 @@
 .collage-text h2 {
   font-size: 1.5rem;
   margin-bottom: 1rem;
-  color: #2f2f2f;
+  color: #464646;
 }
 
 .collage-text p {
   font-size: 1rem;
-  color: #878787;
+  color: #454545;
   font-family: 'IBM Plex Mono', monospace;
   font-weight: 100;
   line-height: 1.6;
+}
+
+.collage-title {
+  font-family: 'IBM Plex Mono', monospace;
+}
+
+.h3-title {
+    font-family: 'IBM Plex Mono', monospace;
 }
 
 .collage-images {
