--- a/src/App.css
+++ b/src/App.css
@@ -231,7 +231,7 @@ body, html {
   background-color: #c9c9c9;
   color: #8c8c8c;
   border-radius: 20px;
-  border: 1.2px solid #cccccc86;
+  border: 1.2px solid #cccccc00;
   overflow: hidden;
   margin-bottom: 80px;
 }
@@ -370,18 +370,26 @@ body, html {
   flex-wrap: nowrap;
   margin-top: 120px;
   gap: 0px; /* previously 100px, reduce this */
+  
 }
 
 .project-meta h4 {
   margin: -80px 0 4px;
   font-weight: 200;
   color: #494949;
+  
+  
+}
+
+.project-date {
+    font-family: 'IBM Plex Mono', monospace; /* only here */
 }
 
 .project-meta p {
   margin: 0;
   font-size: 1rem;
-  color: #646464;
+  color: #292929;
+
 }
 
 .project-meta {
@@ -853,17 +861,17 @@ body, html {
 }
 
 .project-overview {
-  font-size: 0.95rem;
+  font-size: 6rem;
   font-weight: 450;
-  color: #adadad;
+  color: #333131;
   margin: 0; 
 }
 
 .project-date {
   font-size: 0.85rem;
-  font-style: italic;
-  color: #dddddd;
+  color: #d9d3d3;
   margin: 0;
+  
 }
 
 
